<resources>
    <string name="_FONT_SEPARATOR" translatable="false">-</string>
    <string name="_MINUS_ONE" translatable="false">-1</string>
    <string name="about">About</string>
    <string name="about_4pda" translatable="false">&lt;BR>4PDA: &lt;a href="http://4pda.to/forum/index.php?showtopic=824201">4pda.ru/forum/index.php?showtopic=824201&lt;/a></string>
    <string name="about_copyright" translatable="false">\n\nCopyright 2020-2026 Yury Kharchenko</string>
    <string name="about_crowdin" translatable="false">&lt;BR>Crowdin(translation): &lt;a href="https://crowdin.com/project/j2me-loader">crowdin.com/project/j2me-loader&lt;/a></string>
    <string name="about_email" translatable="false">\n\nEmail: <a href="mailto:j2me.forever@gmail.com">j2me.forever@gmail.com</a>\n</string>
    <string name="about_github" translatable="false">\nGithub: <a href="https://github.com/woesss/JL-Mod">woesss/JL-Mod</a>\n</string>
    <string name="about_message">This app allows you to launch J2ME apps and games on Android.\n</string>
    <string name="about_xda" translatable="false">&lt;BR>XDA: &lt;a href="https://forum.xda-developers.com/android/apps-games/app-j2me-loader-t3777889">forum.xda-developers.com/android/apps-games/app-j2me-loader-t3777889&lt;/a></string>
    <string name="action_context_delete">Delete</string>
    <string name="action_context_rename">Rename</string>
    <string name="action_context_shortcut">Add shortcut</string>
    <string name="action_keyboard_ime">Keyboard (IME)</string>
    <string name="action_lock_orientation">Lock screen rotate</string>
    <string name="action_multiplayer">Multiplayer</string>
    <string name="action_multiplayer_unavailable">Multiplayer is not available yet</string>
    <string name="multiplayer_use_network">Use network instead of Bluetooth</string>
    <string name="multiplayer_use_relay">Use relay server</string>
    <string name="multiplayer_friend_ip_hint">Friend IP (ex: Tailscale)</string>
    <string name="multiplayer_relay_host_hint">Relay host</string>
    <string name="multiplayer_room_code_hint">Room code</string>
    <string name="multiplayer_network_hint">Both devices must be on the same network or VPN. Whoever hosts leaves the IP field empty.</string>
    <string name="multiplayer_relay_hint">Use a relay host and shared room code when direct IP connection is not possible.</string>
    <string name="action_reinstall">Reinstall</string>
    <string name="action_settings">Settings</string>
    <string name="config_actions_title">Actions</string>
    <string name="add">Add</string>
    <string name="add_profile_description">Create new profile</string>
    <string name="add_resolution_preset">Add resolution to presets</string>
    <string name="alert_map_menu">Menu key (M) is not assigned!\nThis may make it impossible to access the emulator options</string>
    <string name="alert_msg_workdir_not_exists">Working directory does not exist at path:\n%1$s\nDo you want to create it or choose another one?</string>
    <string name="alert_rewrite_profile">A profile named \"%1$s\" already exists.\nDo you want to overwrite it?</string>
    <string name="author">Author: </string>
    <string name="CANCEL_CMD">Cancel</string>
    <string name="change">Change</string>
    <string name="choose">Choose</string>
    <string name="CLEAR_DATA_CMD">Clear data</string>
    <string name="close">Close</string>
    <string name="cmd_menu">Menu</string>
    <string name="config_virtual_screen_size">virtual screen size (original resolutions of MIDlet):</string>
    <string name="CONFIRMATION_REQUIRED">Confirmation required</string>
    <string name="converting_wait">Converting JAR…</string>
    <string name="crash_dialog_message">Do you want to send error report to the developer?</string>
    <string name="crash_dialog_title">Error detected</string>
    <string name="create">create</string>
    <string name="create_apps_dir_failed">Failed to create a folder in the path:\n%1$s\nselect another.</string>
    <string name="default_label">%1$s (default)</string>
    <string name="dismiss">Dismiss</string>
    <string name="donate">Donate</string>
    <string name="donation_paypal_item" translatable="false">J2ME Loader donation</string>
    <string name="edit">Edit</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="err_missing_app">Application not found.\nPlease check storage device %1$savailability or re-create shortcut.</string>
    <string name="error">Error</string>
    <string name="error_disk_io">Storage error: check disk space</string>
    <string name="error_name">Enter name!</string>
    <string name="error_name_exists">Already exists, enter other name</string>
    <string name="exit">Exit</string>
    <string name="external_storage_not_mounted">This app requires external storage</string>
    <string name="FORCE_CLOSE_CONFIRMATION">Force-closing the application may result in data loss or even break it completely!\nProceed?</string>
    <string name="help">Help</string>
    <string name="help_message">&#8226; Enabling filtering in some cases can greatly reduce performance. Disable this option if game is too slow.&lt;BR>&#8226; Image flickering issues can be fixed by enabling the "Immediate processing mode" option.</string>
    <string name="hide_buttons">Hide buttons</string>
    <string name="identity_filter">Fast (no filter)</string>
    <string name="install">install</string>
    <string name="install_done">Application successfully installed!</string>
    <string name="install_jar_needed">Select the JAR file</string>
    <string name="install_jar_non_matched_jad">This app differs from that described in JAD.\nIgnore JAD and install anyway?</string>
    <string name="invalid_resolution_not_saved">Invalid resolutions: not saved!</string>
    <string name="layout_edit_finish">Finish edit mode</string>
    <string name="layout_edit_finished">Edit mode finished</string>
    <string name="layout_edit_mode">Keylayout edit mode</string>
    <string name="layout_scale_mode">Keylayout resize mode</string>
    <string name="layout_switch">Switch keylayout</string>
    <string name="pref_vk_type_custom_editable">Custom Editable</string>
    <string name="vk_customizer_title">VK Edit</string>
    <string name="vk_customizer_per_key_skins">Per-key skins...</string>
    <string name="vk_customizer_refit_keys">Refit Keys</string>
    <string name="vk_customizer_reset_layout">Reset Layout</string>
    <string name="vk_customizer_show_grid">Show Grid</string>
    <string name="vk_customizer_snap_grid">Snap to Grid</string>
    <string name="vk_customizer_grid_size">Grid Size</string>
    <string name="vk_customizer_finish">Finish</string>
    <string name="vk_customizer_collapse">Collapse</string>
    <string name="vk_customizer_joystick">Joystick</string>
    <string name="vk_customizer_joystick_preset">Joystick mode</string>
    <string name="vk_customizer_joystick_radius">Size</string>
    <string name="vk_customizer_joystick_deadzone">Dead zone</string>
    <string name="vk_customizer_joystick_base_skin">Base image…</string>
    <string name="vk_customizer_joystick_thumb_skin">Thumb image…</string>
    <string name="vk_customizer_joystick_clear_skin">Clear joystick images</string>
    <string name="vk_customizer_joystick_hint">Drag the joystick on the screen (while editing) to reposition it.</string>
    <string-array name="joystick_preset_entries">
        <item>4-Way</item>
        <item>8-Way</item>
        <item>8-Way (Numpad diagonals A)</item>
        <item>8-Way (Numpad diagonals B)</item>
    </string-array>
    <string name="vk_skin_dialog_title">Per-key skins...</string>
    <string name="vk_skin_select_key">Select key</string>
    <string name="vk_skin_button">Button skin</string>
    <string name="vk_skin_button_pressed">Button skin pressed</string>
    <string name="vk_skin_icon">Icon</string>
    <string name="vk_skin_icon_scale">Icon scale</string>
    <string name="vk_skin_default">Default</string>
    <string name="vk_skin_clear">Clear</string>
    <string name="licenses">Licenses</string>
    <string name="load_profile">Load profile</string>
    <string name="loading_info">loading info…</string>
    <string name="midlet_installer_title">MIDlet installer</string>
    <string name="installer_tip_keep_browsing">You can keep browsing. We will let you know when it is done.</string>
    <string name="installer_step_extract">Extracting JAR</string>
    <string name="installer_step_manifest">Reading Manifest</string>
    <string name="installer_step_convert">Converting resources</string>
    <string name="installer_step_cache">Generating cache</string>
    <string name="installer_step_finalize">Finishing installation</string>
    <string name="installer_title_installing">Installing game</string>
    <string name="installer_size_value">Size: %1$s</string>
    <string name="installer_version_value">Version: %1$s</string>
    <string name="installer_converting_files">Converting files...</string>
    <string name="installer_time_remaining">Time remaining: %1$s</string>
    <string name="installer_status_pending">Pending</string>
    <string name="installer_status_done">Done</string>
    <string name="installer_status_active">In progress</string>
    <string name="pref_language_system_default">System default</string>
    <string name="preload_progress">Copying files %1$d/%2$d: %3$s</string>
    <string name="preload_failed">Preload failed: %1$s</string>
    <string name="preload_title">Preparing files</string>
    <string name="preload_subtitle">This may take a moment</string>
    <string name="preload_wait">Loading resources...</string>
    <string name="splash_subtitle">Gameloft Classics</string>
    <string name="log_saved">Log has been saved</string>
    <string name="mapping_dialog_key_not_specified">not specified</string>
    <string name="classics_brand">JL MOD</string>
    <string name="classics_title">Classics</string>
    <string name="pref_category_experimental">Experimental/temporary options</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_classics">Classics Interface</string>
    <string name="pref_category_system">System Behavior</string>
    <string name="pref_category_library">Library &amp; Profiles</string>
    <string name="pref_emulator_dir">Working directory</string>
    <string name="pref_enable_actionbar_summary">In fullscreen applications</string>
    <string name="pref_enable_actionbar_title">Enable ActionBar</string>
    <string name="pref_enable_statusbar_title">Enable statusbar</string>
    <string name="pref_classics_view_size_title">Classics gameplay size</string>
    <string name="pref_classics_control_style_title">Classics control style</string>
    <string name="pref_classics_handset_skin_title">Handset skin</string>
    <string name="pref_language">Language</string>
    <string name="PREF_LIMIT_FPS">Limit FPS</string>
    <string name="pref_mascot_summary">Show message when using</string>
    <string name="pref_mascot_title">Detect Mascot Capsule 3D</string>
    <string name="pref_screenshot_summary">Disable scaling and filtering for screenshots</string>
    <string name="pref_screenshot_title">Raw screenshot</string>
    <string name="pref_theme_default" translatable="false">light</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_vibration_title">Enable vibration</string>
    <string name="pref_wakelock_title">Keep screen on</string>
    <string name="profiles">Profiles</string>
    <string name="RESET_LAYOUT_CMD">Reset keylayout</string>
    <string name="RESET_SETTINGS_CMD">Reset settings</string>
    <string name="save_log">Save log</string>
    <string name="save_profile">Save profile</string>
    <string name="START_CMD">Start</string>
    <string name="take_screenshot">Take screenshot</string>
</resources>