<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <PreferenceCategory android:title="@string/pref_category_appearance">
        <ListPreference
            android:defaultValue="@string/pref_theme_default"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:icon="@drawable/ic_setting_theme"
            android:key="pref_theme"
            android:title="@string/pref_theme_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:icon="@drawable/ic_setting_translate"
            android:key="pref_language"
            android:title="@string/pref_language"
            app:persistent="false"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_classics">
        <ListPreference
            android:defaultValue="default"
            android:entries="@array/pref_classics_view_size_entries"
            android:entryValues="@array/pref_classics_view_size_values"
            android:icon="@drawable/ic_setting_default"
            android:key="pref_classics_view_size"
            android:title="@string/pref_classics_view_size_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="joystick"
            android:entries="@array/pref_classics_control_style_entries"
            android:entryValues="@array/pref_classics_control_style_values"
            android:icon="@drawable/ic_setting_default"
            android:key="pref_classics_control_style"
            android:title="@string/pref_classics_control_style_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="dark"
            android:entries="@array/pref_classics_handset_skin_entries"
            android:entryValues="@array/pref_classics_handset_skin_values"
            android:icon="@drawable/ic_setting_default"
            android:key="pref_classics_handset_skin"
            android:title="@string/pref_classics_handset_skin_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_system">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_setting_enable_action_bar"
            android:key="pref_actionbar_switch"
            android:summary="@string/pref_enable_actionbar_summary"
            android:title="@string/pref_enable_actionbar_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_setting_enable_statusbar"
            android:key="pref_statusbar_switch"
            android:summary="@string/pref_enable_actionbar_summary"
            android:title="@string/pref_enable_statusbar_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_setting_keep_screen_on"
            android:key="pref_wakelock_switch"
            android:title="@string/pref_wakelock_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_setting_screenshot"
            android:key="pref_screenshot_switch"
            android:summary="@string/pref_screenshot_summary"
            android:title="@string/pref_screenshot_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_setting_enable_vibration"
            android:key="pref_vibration_switch"
            android:title="@string/pref_vibration_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_library">
        <Preference
            android:key="pref_default_settings"
            android:icon="@drawable/ic_setting_default"
            android:title="@string/profiles" />

        <Preference
            android:key="emulator_dir"
            android:icon="@drawable/ic_setting_folder"
            android:title="@string/pref_emulator_dir"
            tools:summary="/sdcard/J2ME-Loader" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_experimental">
        <SwitchPreferenceCompat
            android:key="micro3d_using_message"
            app:defaultValue="false"
            android:icon="@drawable/ic_setting_message"
            android:title="@string/pref_mascot_title"
            android:summary="@string/pref_mascot_summary" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
