<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_exit_midlet"
        android:title="@string/exit" />
    <item
        android:id="@+id/action_save_log"
        android:title="@string/save_log" />
    <item
        android:id="@+id/action_lock_orientation"
        android:title="@string/action_lock_orientation"
        android:checkable="true"
        android:checked="false" />
    <group android:id="@+id/action_group_canvas">
        <item
            android:icon="@drawable/ic_action_keyboard"
            android:id="@+id/action_ime_keyboard"
            android:title="@string/action_keyboard_ime" />
        <item
            android:icon="@drawable/ic_action_screenshot"
            android:id="@+id/action_take_screenshot"
            android:title="@string/take_screenshot" />

        <item
            android:id="@+id/action_memory_search"
            android:title="@string/action_memory_search" />

        <item
            android:id="@+id/action_layout_edit_mode"
            android:title="@string/action_layout_edit_mode" />

        <item
            android:id="@+id/action_limit_fps"
            android:title="@string/PREF_LIMIT_FPS" />

        <item
            android:id="@+id/action_multiplayer"
            android:enabled="false"
            android:title="@string/action_multiplayer" />
    </group>
</menu>
